--- a/index.html
+++ b/index.html
@@ -49,36 +49,42 @@
 <section class="flex-features">
     <div class="row">
       <div class="column">
+        <img src="/img/logic 1.png" alt="">
         <h3>Finances Managment</h3>
         <p>For today's Forex traders, this means
           that they need no longer feel
           Forex-deprived access.</p>
       </div>
       <div class="column">
+        <img src="/img/statistics 1.png" alt="">
         <h3>Crypto Dashboard</h3>
         <p>For today's Forex traders, this means
           that they need no longer feel
           Forex-deprived access.</p>
       </div>
       <div class="column">
+        <img src="/img/privacy-policy 1.png" alt="">
         <h3>Privacy and Policy</h3>
         <p>For today's Forex traders, this means
           that they need no longer feel
           Forex-deprived access.</p>
       </div>
       <div class="column">
+        <img src="/img/check.png">
         <h3>Finances Managment</h3>
         <p>For today's Forex traders, this means
           that they need no longer feel
           Forex-deprived access.</p>
       </div>
       <div class="column">
+        <img src="/img/Group.png" alt="">
         <h3>Finances Managment</h3>
         <p>For today's Forex traders, this means
           that they need no longer feel
           Forex-deprived access.</p>
       </div>
       <div class="column">
+        <img src="/img/Group (1).png" alt="">
         <h3>Finances Managment</h3>
         <p>For today's Forex traders, this means
           that they need no longer feel
