--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@
       </div>
     </div>
   </section>
+  <section class="founder">
+    <div class="founder-box">
+      <div class="ceo">
+        <img src="/img/unsplash_dIMJWLx1YbE.png" alt="">
+      </div>
+      <div class="quote">
+        <img src="/img/Group (2).png" alt="">
+        <h1>If the cryptocurrency market overall or a digital asset is solving a problem, it's going to drive some value</h1>
+      <h5>Albert Johnson</h5>
+      <p>CEO of OictaFX</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="jobs">
+    <div class="jobs">
+      <h2>Jobs</h2>
+      <div class="job-1">
+        <h3>Product Manager</h3>
+      </div>
+      <div class="job-2"></div>
+      <div class="job-3"></div>
+      <div class="job-4"></div>
+      <button>View All Openings</button>
+    </div>
+  </section>
 </main>
 
 </body>
