--- a/index.html
+++ b/index.html
@@ -108,14 +108,31 @@
 
   <section id="jobs">
     <div class="jobs">
-      <h2>Jobs</h2>
-      <div class="job-1">
-        <h3>Product Manager</h3>
+      <h1>Jobs</h1>
+      <div class="job">
+
+          <h3>Product Manager</h3>
+          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+          <i class="fa-solid fa-arrow-right-long fa-3x"></i>
       </div>
-      <div class="job-2"></div>
-      <div class="job-3"></div>
-      <div class="job-4"></div>
-      <button>View All Openings</button>
+      <div class="job">
+        <h3>Marketing Director</h3>
+        <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+        <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+      </div>
+      <div class="job">
+        <h3>Financial Analyst</h3>
+        <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+        <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+      </div>
+      <div class="job">
+        <h3>UI/UX Designer</h3>
+        <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+        <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+      </div>
+        <div class="view-btn">
+          <button class="btn-end">View All Openings</button>
+        </div>
     </div>
   </section>
 </main>
