--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <button class="btn">Login</button>
           <button class="btn" id="btn-sign">Sign Up</button>
         </div>
+        <div class="list"><i class="fa-solid fa-bars"></i></div>
       </div>
     </nav>
 
@@ -136,6 +137,59 @@
     </div>
   </section>
 </main>
+
+<footer>
+  <div class="footer">
+    <div class="media-text">
+        <div class="about">
+          <h3>About</h3>
+          <ul>
+            <li>About</li>
+            <li>Services</li>
+            <li>Features</li>
+            <li>Team</li>
+          </ul>
+        </div>
+        <div class="portfolio">
+          <h3>Portfolio</h3>
+          <ul>
+            <li>Web Apps</li>
+            <li>Websites</li>
+            <li>IOS Apps</li>
+            <li>Logo Design</li>
+            <li>Illustration</li>
+          </ul>
+        </div>
+        <div class="consultancy">
+          <h3>Consultancy</h3>
+          <ul>
+            <li>Marketing</li>
+            <li>Social Media</li>
+            <li>Managment</li>
+            <li>SEO</li>
+            <li>Custom Plans</li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h3>Contact Us</h3>
+          <ul>
+            <li>Contacts</li>
+            <li>Team members</li>
+            <li>History</li>
+            <li>info@pictaFX.com</li>
+          </ul>
+        </div>
+    </div>
+    <div class="media">
+      <ul id="media">
+        <li><i class="fa-brands fa-facebook fa-2x"></i></li>
+        <li><i class="fa-brands fa-instagram fa-2x"></i></li>
+        <li><i class="fa-brands fa-twitter fa-2x"></i></li>        
+        <li><i class="fa-brands fa-pinterest fa-2x"></i></li>
+      </ul>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
