--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </ul>
         </div>
         <div class="registr">
-          <button class="btn">Login</button>
+          <button class="btn" id="btn-log">Login</button>
           <button class="btn" id="btn-sign">Sign Up</button>
         </div>
         <div class="list"><i class="fa-solid fa-bars"></i></div>
