--- a/index.html
+++ b/index.html
@@ -111,25 +111,40 @@
     <div class="jobs">
       <h1>Jobs</h1>
       <div class="job">
-
+        <div class="left">
           <h3>Product Manager</h3>
           <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+        </div>
+        <div class="right">
           <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+        </div>
       </div>
       <div class="job">
-        <h3>Marketing Director</h3>
-        <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
-        <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+        <div class="left">
+          <h3>Marketing Director</h3>
+          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+        </div>
+        <div class="right">
+          <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+        </div>
       </div>
       <div class="job">
-        <h3>Financial Analyst</h3>
-        <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
-        <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+        <div class="left">
+          <h3>Financial Analyst</h3>
+          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+        </div>
+        <div class="right">
+          <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+        </div>
       </div>
       <div class="job">
-        <h3>UI/UX Designer</h3>
-        <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
-        <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+        <div class="left">
+          <h3>UI/UX Designer</h3>
+          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+        </div>
+        <div class="right">
+          <i class="fa-solid fa-arrow-right-long fa-3x"></i>
+        </div>
       </div>
         <div class="view-btn">
           <button class="btn-end">View All Openings</button>
