--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
 <section class="flex-features">
     <div class="row">
       <div class="column">
-        <img src="/img/logic 1.png" alt="">
-        <h3>Finances Managment</h3>
-        <p>For today's Forex traders, this means
-          that they need no longer feel
-          Forex-deprived access.</p>
+        <div class="top">
+          <img src="/img/logic 1.png" alt="">
+        </div>
+        <div class="bottom">
+          <h3>Finances Managment</h3>
+          <p>For today's Forex traders, this means
+            that they need no longer feel
+            Forex-deprived access.</p>
+        </div>
       </div>
       <div class="column">
         <img src="/img/statistics 1.png" alt="">
