--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="job">
         <div class="left">
           <h3>Product Manager</h3>
-          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> USA, New York <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
         </div>
         <div class="right">
           <i class="fa-solid fa-arrow-right-long fa-3x"></i>
@@ -126,7 +126,7 @@
       <div class="job">
         <div class="left">
           <h3>Marketing Director</h3>
-          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> France, Paris <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
         </div>
         <div class="right">
           <i class="fa-solid fa-arrow-right-long fa-3x"></i>
@@ -135,7 +135,7 @@
       <div class="job">
         <div class="left">
           <h3>Financial Analyst</h3>
-          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Turkey, Istanbul <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
         </div>
         <div class="right">
           <i class="fa-solid fa-arrow-right-long fa-3x"></i>
@@ -144,7 +144,7 @@
       <div class="job">
         <div class="left">
           <h3>UI/UX Designer</h3>
-          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> Lagos, Nigeria <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
+          <p><i class="fa-solid fa-location-dot" style="color: rgb(0, 106, 255);"></i> England, London <i class="fa-solid fa-clock-rotate-left" style="color: rgb(255, 217, 0);"></i> Full time</p>
         </div>
         <div class="right">
           <i class="fa-solid fa-arrow-right-long fa-3x"></i>
