--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
       </div>
         <div class="view-btn">
-          <button class="btn-end">View All Openings</button>
+          <button class="btn-end btn">View All Openings</button>
         </div>
     </div>
   </section>
